--- a/app/scripts/components/Home/home-style.scss
+++ b/app/scripts/components/Home/home-style.scss
@@ -30,7 +30,7 @@
       background-size: cover;
       min-height: 532px;
 
-      border: 1px solid $theme-accent;
+      border: 1px solid $theme-alternative;
     }
 
     &:last-child {
@@ -39,7 +39,7 @@
       background-size: cover;
       min-height: 532px;
 
-      border: 1px solid $theme-accent;
+      border: 1px solid $theme-alternative;
       border-left: 0;
     }
   }
