adds spinner to toggle menu + new style for centering spinner

--- a/app/scripts/components/OtherVisualization/ToggleMenu/toggle-menu-template.html
+++ b/app/scripts/components/OtherVisualization/ToggleMenu/toggle-menu-template.html
@@ -27,7 +27,9 @@
             <td>{{basin.water}}</td>
             <td>{{basin.pop}}</td>
           </tr>
+        </tbody>
       </table>
+      <spinner-component class="-relative" :loading="basinsLoading"></spinner-component>
     </div>
   </div>
 </aside>
