--- a/app/scripts/components/Footer/footer-template.html
+++ b/app/scripts/components/Footer/footer-template.html
@@ -1,5 +1,6 @@
 <div class="c-footer">
   <div class="footer-wrapper">
+    <partners-carousel></partners-carousel>
     <ul class="footer-links">
       <li>
         <a href="http://www.data4sdgs.org/" target="_blank">
