creates new banner component and adds it to the root component

--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -40,9 +40,12 @@
         <h3 class="-light">Start Collecting, Visualising & Monitoring Data the Right way.</h3>
       </div>
 
-      <div class="c-button-group -center column small-6 medium-4">
-        <button-component class="-bordered -big" :click="goToPlayground">Start</button-component>
+      <div class="-center column small-6 medium-4">
+        <div class="c-button-group -center">
+          <button-component class="-bordered -big" :click="goToPlayground">Start</button-component>
+        </div>
       </div>
+
 
     </div>
   </article-component>
