--- a/app/styles/components/_button-group.scss
+++ b/app/styles/components/_button-group.scss
@@ -1,8 +1,10 @@
 .c-button-group {
   display: flex;
+  height: 100%;
 
   &.-center {
     justify-content: center;
+    align-items: center;
   }
 
   &.-justified {
