--- a/app/scripts/components/Banner/banner-template.html
+++ b/app/scripts/components/Banner/banner-template.html
@@ -4,17 +4,15 @@
       <div class="columns small-12 medium-10">
         <div class="row">
           <div class="column small-6 medium-8 align-middle">
-            <h3 class="banner-heading -light">Welcome! This is still a beta.</h3>
+            <h3 class="banner-heading -light">{{heading}}</h3>
             <p class="banner-body">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-              ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              {{body}}
             </p>
           </div>
 
           <div class="column small-6 medium-4">
             <div class="c-button-group -center">
-              <button-component class="-bordered -big" :click="hide">Got it!</button-component>
+              <button-component class="-bordered -big" :click="action">{{actionName}}</button-component>
             </div>
           </div>
         </div>
