--- a/app/scripts/components/PartnersCarousel/template.html
+++ b/app/scripts/components/PartnersCarousel/template.html
@@ -1,19 +1,19 @@
 <section class="c-partners-carousel">
-  <slick ref="slick" :options="slickOptions">
-    <a><img src="/static/partners/ACTS_LOGO.png" alt="ACTS"></a>
-    <a><img src="/static/partners/Abia-state-Governor_LOGO.png" alt="Abia State Governor"></a>
-    <a><img src="/static/partners/africa_gathering_LOGO.png" alt="Africa Gathering"></a>
-    <a><img src="/static/partners/Africa_LOGO.png" alt="Africa"></a>
-    <a><img src="/static/partners/african-monitor_LOGO.png" alt="African Monitor"></a>
-    <a><img src="/static/partners/africas-voices_LOGO.png" alt="Africas Voices"></a>
-    <a><img src="/static/partners/Agora_LOGO.png" alt="Agora"></a>
-    <a><img src="/static/partners/aiddata-white_LOGO.png" alt="Aiddata"></a>
-    <a><img src="/static/partners/barclays_LOGO.png" alt="Barclays"></a>
-    <a><img src="/static/partners/Bigdataforafrica_LOGO.png" alt="Big Data for Africa"></a>
-    <a><img src="/static/partners/BIID_LOGO.png" alt="BIID"></a>
-    <a><img src="/static/partners/Bop_LOGO.png" alt="Bop"></a>
-    <a><img src="/static/partners/bw-web_LOGO.png" alt="BW Web"></a>
-    <a><img src="/static/partners/CCB_LOGO.png" alt="CCB"></a>
-    <a><img src="/static/partners/Flag_of_Canada-LOGO.png" alt="Canada"></a>
-  </slick>
+  <slider-component :options="{ perPage: 4 }">
+    <div><a><img src="/static/partners/ACTS_LOGO.png" alt="ACTS"></a></div>
+    <div><a><img src="/static/partners/Abia-state-Governor_LOGO.png" alt="Abia State Governor"></a></div>
+    <div><a><img src="/static/partners/africa_gathering_LOGO.png" alt="Africa Gathering"></a></div>
+    <div><a><img src="/static/partners/Africa_LOGO.png" alt="Africa"></a></div>
+    <div><a><img src="/static/partners/african-monitor_LOGO.png" alt="African Monitor"></a></div>
+    <div><a><img src="/static/partners/africas-voices_LOGO.png" alt="Africas Voices"></a></div>
+    <div><a><img src="/static/partners/Agora_LOGO.png" alt="Agora"></a></div>
+    <div><a><img src="/static/partners/aiddata-white_LOGO.png" alt="Aiddata"></a></div>
+    <div><a><img src="/static/partners/barclays_LOGO.png" alt="Barclays"></a></div>
+    <div><a><img src="/static/partners/Bigdataforafrica_LOGO.png" alt="Big Data for Africa"></a></div>
+    <div><a><img src="/static/partners/BIID_LOGO.png" alt="BIID"></a></div>
+    <div><a><img src="/static/partners/Bop_LOGO.png" alt="Bop"></a></div>
+    <div><a><img src="/static/partners/bw-web_LOGO.png" alt="BW Web"></a></div>
+    <div><a><img src="/static/partners/CCB_LOGO.png" alt="CCB"></a></div>
+    <div><a><img src="/static/partners/Flag_of_Canada-LOGO.png" alt="Canada"></a></div>
+  </slider-component>
 </section>
