--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -9,7 +9,7 @@
       <nav class="nav -primary">
         <ul>
           <router-link active-class="-active" tag="li" to="/" exact>
-            <a>About Us</a>
+            <a>Home</a>
           </router-link>
 
           <router-link active-class="-active" tag="li" to="/playground">
@@ -18,6 +18,10 @@
 
           <router-link active-class="-active" tag="li" to="/examples/">
             <a>Examples</a>
+          </router-link>
+
+          <router-link active-class="-active" tag="li" to="/about" exact>
+            <a>About Us</a>
           </router-link>
         </ul>
       </nav>
