includes feedback component with mailchimp newsletter

--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -95,6 +95,10 @@
     </slider-component>
   </article-component>
 
+  <article-component class="-accent -no-padding">
+    <feedback-component></feedback-component>
+  </article-component>
+
   <article-component class="-complementary">
     <h1>Data Champions</h1>
     <h4 class="-light -center -uppercase">
