changes partners carousel location

--- a/app/scripts/components/PartnersCarousel/style.scss
+++ b/app/scripts/components/PartnersCarousel/style.scss
@@ -1,5 +1,9 @@
+// Import global variables
+@import '../../../styles/variables';
+
 .c-partners-carousel {
-  margin-bottom: 2rem;
+  margin-top: $large-margin;
+  margin-bottom: $medium-margin;
   .c-slider {
     div {
       text-align: center;
