when a dataset doesnt have metadata uses source tag instead

--- a/app/scripts/components/Dataset/dataset-template.html
+++ b/app/scripts/components/Dataset/dataset-template.html
@@ -3,7 +3,7 @@
   <h4 class="-left dataset-header -selectable" v-else @click="selectDataset">{{name}}</h4>
   <div class="dataset-detail">
     <a class="dataset-link" :href="link">{{source || 'Source'}}</a>
-    <div class="dataset-badge">
+    <div class="dataset-badge" v-if="goal && target">
       <div class="dataset-badge-item">Goal {{goal}}</div>
       <div class="dataset-badge-item">Target {{target}}</div>
     </div>
