--- a/app/scripts/components/Sidebar/sidebar-template.html
+++ b/app/scripts/components/Sidebar/sidebar-template.html
@@ -3,10 +3,10 @@
     <h4>Conflicts related to protected areas</h4>
     <button type="button" @click="openSidebar">
       <div class="viel"></div>
-      <span v-bind:class="arrowOpen"></span>
+      <span :class="arrowOpen"></span>
     </button>
   </div>
-  <div v-bind:class="contentOpen">
+  <div :class="contentOpen">
     <div class="layers-switch">
       <ul class="c-legend">
         <li class="legend-item">
