adds banner text and support for raw hrml inside the banner

--- a/app/scripts/components/Banner/banner-style.scss
+++ b/app/scripts/components/Banner/banner-style.scss
@@ -29,6 +29,10 @@
     color: $theme-base;
     font-size: $font-size-xsmall;
     margin: 0;
+
+    a {
+      text-transform: lowercase;
+    }
   }
 
   @keyframes appear {
