--- a/app/scripts/components/Banner/banner-template.html
+++ b/app/scripts/components/Banner/banner-template.html
@@ -5,9 +5,7 @@
         <div class="row">
           <div class="column small-6 medium-8 align-middle">
             <h3 class="banner-heading -light">{{heading}}</h3>
-            <p class="banner-body">
-              {{body}}
-            </p>
+            <p class="banner-body" v-html="body"></p>
           </div>
 
           <div class="column small-6 medium-4">
