add styles to the 2nd vizz legend

--- a/app/scripts/components/Icon/icon-style.scss
+++ b/app/scripts/components/Icon/icon-style.scss
@@ -52,6 +52,11 @@
     stroke: $theme-base;
   }
 
+  &.-alternative > svg {
+    fill: $theme-alternative;
+    stroke: $theme-alternative;
+  }
+
   &.-complementary > svg {
     fill: $theme-complementary;
     stroke: $theme-complementary;
