changes style to use color palette

--- a/app/scripts/components/Header/header-style.scss
+++ b/app/scripts/components/Header/header-style.scss
@@ -103,7 +103,7 @@
       &.-active {
         pointer-events: none;
         a {
-          color: $mexican-pink;
+          color: $theme-accent;
         }
       }
     }
