--- a/app/scripts/components/Landing/Footer/style.scss
+++ b/app/scripts/components/Landing/Footer/style.scss
@@ -1,7 +1,7 @@
 @import '../../../../styles/variables';
 
 .c-landing-footer {
-  background-color: $mexican-pink;
+  background-color: $theme-accent;
   min-height: 15vh;
   padding: 36px 0;
   a {
