--- a/app/scripts/components/Map/map-style.scss
+++ b/app/scripts/components/Map/map-style.scss
@@ -53,7 +53,7 @@ $bubble-cluster-font-color: #483805;
     border-radius: 0!important;
 
     & a {
-      border: 1px solid $mexican-pink !important;
+      border: 1px solid $theme-accent !important;
       border-radius: 0!important;
       color: $mexican-pink;
       background-color: transparent;
