--- a/app/scripts/components/Sidebar/sidebar-style.scss
+++ b/app/scripts/components/Sidebar/sidebar-style.scss
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: space-between;
   color: $white;
-  background-color: $mexican-pink;
+  background-color: $theme-accent;
 
   h4 {
     flex-grow: 1;
@@ -103,7 +103,7 @@
     }
 
     &.-active {
-      background-color: $mexican-pink;
+      background-color: $theme-accent;
 
       .toggle {
         left: auto;
