adds missing datasets

--- a/app/scripts/components/MapFooter/map-footer-template.html
+++ b/app/scripts/components/MapFooter/map-footer-template.html
@@ -23,14 +23,25 @@
               World Database on Protected Areas - Protected Areas Surface
             </a>
           </li>
-          <li @click="goTo('/playground/bd47397c-b714-4ced-9fe9-d20b0b353e3')">
-            <a>Events or conflicts</a>
+          <li>
+            <a @click="goTo('/playground/b3059ff9-0054-4343-a7ac-d7a821d222cd')">
+            Events or conflicts
+            </a>
           </li>
-          <li @click="goTo('/playground/1c56e5c4-f617-4570-90dd-20724ea674b1')">
-            <a>Water Transitions</a>
+          <li>
+            <a @click="goTo('/playground/ee2c5877-f212-4eb4-a63a-a82ba7e4e168')">
+              Water basins in South Africa
+            </a>
           </li>
-          <li @click="goTo('/playground/bd47397c-b714-4ced-9fe9-d20b0b353e3')">
-            <a>Population in South Africa</a>
+          <li>
+            <a @click="goTo('/playground/1c56e5c4-f617-4570-90dd-20724ea674b1')">
+              Water Transitions
+            </a>
+          </li>
+          <li>
+            <a @click="goTo('/playground/bd47397c-b714-4ced-9fe9-d20b0b353e3f')">
+              Population in South Africa
+            </a>
           </li>
         </ul>
       </div>
