adds show feedback flag

--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -101,7 +101,7 @@
     </div>
   </article-component>
 
-  <article-component class="-accent -no-padding">
+  <article-component class="-accent -no-padding" v-if="showFeedback">
     <feedback-component></feedback-component>
   </article-component>
 
