changes home link + rel="noopener noreferrer"

--- a/app/scripts/components/Landing/Footer/template.html
+++ b/app/scripts/components/Landing/Footer/template.html
@@ -1,11 +1,11 @@
 <div class="c-landing-footer">
   <div class="landing-wrapper -footer">
     <div class="footer-info">
-      <p class="footer-text">See more at <a href="http://www.data4sdgs.org/#sthash.8avBfrhG.dpuf" target="_blank">http://www.data4sdgs.org/#sthash.8avBfrhG.dpuf</a></p>
+      <p class="footer-text">See more at <a href="http://www.data4sdgs.org/#sthash.8avBfrhG.dpuf" rel="noopener noreferrer" target="_blank">http://www.data4sdgs.org/#sthash.8avBfrhG.dpuf</a></p>
       <ul class="footer-links">
-        <li><a href="http://www.data4sdgs.org" target="_blank">www.data4sdgs.org</a></li>
+        <li><a href="http://www.data4sdgs.org" rel="noopener noreferrer" target="_blank">www.data4sdgs.org</a></li>
         <li><a href="mailto:info@Data4SDGS.org">info@Data4SDGS.org</a></li>
-        <li><a href="https://twitter.com/hashtag/data4sdgs" target="_blank">#data4sdgs</a></li>
+        <li><a href="https://twitter.com/hashtag/data4sdgs" rel="noopener noreferrer" target="_blank">#data4sdgs</a></li>
       </ul>
     </div>
     <a href="/">
