--- a/app/scripts/components/MapFooter/map-footer-template.html
+++ b/app/scripts/components/MapFooter/map-footer-template.html
@@ -2,7 +2,7 @@
 <footer class="c-map-footer">
   <button @click="toggleModal">About the Data</button>
   <a href="#">Learn About DATA4SDGS</a>
-  <span><a href="https://carto.com/" target="_blank">Carto</a></span>
+  <span><a href="https://carto.com/" rel="noopener noreferrer" target="_blank">Carto</a></span>
 </footer>
 
 <modal-component class="-center">
