--- a/app/scripts/components/Share/share-template.html
+++ b/app/scripts/components/Share/share-template.html
@@ -6,12 +6,12 @@
   </div>
   <ul class="share-links">
     <li class="share-links-item">
-      <a :href="facebookEncodedUrl" target="_blank" type="button" name="button">
+      <a :href="facebookEncodedUrl" rel="noopener noreferrer" target="_blank" type="button" name="button">
         <icon-component class="-small" name="icon-facebook"></icon-component>
       </a>
     </li>
     <li class="share-links-item">
-      <a :href="twitterEncodedUrl" target="_blank" type="button" name="button">
+      <a :href="twitterEncodedUrl" rel="noopener noreferrer" target="_blank" type="button" name="button">
         <icon-component class="-small" name="icon-twitter"></icon-component>
       </a>
     </li>
