--- a/app/scripts/components/Footer/footer-template.html
+++ b/app/scripts/components/Footer/footer-template.html
@@ -3,20 +3,20 @@
     <ul class="footer-links">
       <div class="footer-link-section">
         <li>
-          <a href="http://www.data4sdgs.org/" target="_blank">
+          <a href="http://www.data4sdgs.org/" rel="noopener noreferrer" target="_blank">
             <img src="/static/logos/global_partnership_sdg.jpg" class="sdg-logo">
           </a>
         </li>
 
         <!-- <li>
           <span class="footnote">Powered by:</span>
-          <a href="http://resourcewatch.org/" target="_blank">
+          <a href="http://resourcewatch.org/" rel="noopener noreferrer" target="_blank">
             <img src="/static/logos/logoRW.png" class="rw-logo">
           </a>
         </li> -->
       </div>
       <li>
-        <a href="http://www.vizzuality.com/" target="_blank">
+        <a href="http://www.vizzuality.com/" rel="noopener noreferrer" target="_blank">
           <icon-component name="icon-vizz" class="vizz-logo"></icon-component>
         </a>
       </li>
