--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -12,8 +12,8 @@
             <a>Home</a>
           </router-link>
 
-          <router-link active-class="-active" tag="li" to="/playground">
-            <a>Playground</a>
+          <router-link active-class="-active" tag="li" to="/data-sets">
+            <a>Data sets</a>
           </router-link>
 
           <router-link active-class="-active" tag="li" to="/examples/">
