--- a/app/scripts/components/Landing/Page/style.scss
+++ b/app/scripts/components/Landing/Page/style.scss
@@ -60,7 +60,7 @@
     display: block;
     width: 80px;
     height: 3px;
-    background-color: $mexican-pink;
+    background-color: $theme-blue;
     margin: 0 0 20px 10px;
   }
 
