--- a/app/scripts/components/Map/map-style.scss
+++ b/app/scripts/components/Map/map-style.scss
@@ -55,7 +55,7 @@ $bubble-cluster-font-color: #483805;
     & a {
       border: 1px solid $theme-accent !important;
       border-radius: 0!important;
-      color: $mexican-pink;
+      color: $theme-blue;
       background-color: transparent;
       font-weight: lighter;
       line-height: rem(31);
