--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -2,7 +2,7 @@
 $black: #212020;
 $grayed-black: #292929;
 $white: #FFFFFF;
-$mexican-pink: #ff0065;
+$theme-blue: #334285;
 $dark-grey: #2F2F2F;
 $gold-yellow: #EFA600;
 $bright-yellow: #ffd722;
@@ -32,7 +32,7 @@ $font-weight-bold: 700;
 // App Palette
 $theme-base: $white;
 $theme-complementary: $lightgrey;
-$theme-accent: $mexican-pink;
+$theme-accent: $theme-blue;
 $theme-alternative: $black;
 
 
