--- a/app/styles/layout/_header.scss
+++ b/app/styles/layout/_header.scss
@@ -4,8 +4,12 @@
   right: 0;
   z-index: 2;
 
-  background-color: transparent;
+  background-color: $white;
   color: $base-bg-color;
+
+  .header-logo {
+    max-width: 260px;
+  }
 
   &.-over {
     z-index: 102;
