--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -49,19 +49,18 @@ h3, h4 {
 
 h1 {
   font-family: $heading-font-family;
-  color: $heading-font-color;
   line-height: 1.2;
   margin-top: 0;
   margin-bottom: $small-margin;
   text-transform: uppercase;
   font-size: $h1-font-size;
   text-align: center;
+  font-weight: $font-weight-normal;
 }
 
 h2 {
   font-size: $h2-font-size;
   font-family: $base-font-family;
-  color: $theme-base;
   line-height: 1.14;
   font-weight: $font-weight-normal;
 }
