--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -4,7 +4,7 @@ $grayed-black: #292929;
 $white: #FFFFFF;
 $theme-blue: #334285;
 $dark-grey: #2F2F2F;
-$gold-yellow: #EFA600;
+$gold-yellow: #f3b641;
 $bright-yellow: #ffd722;
 $lightgrey: #F3F3F3;
 $grey: grey;
