structure change to about home

--- a/app/scripts/components/Home/home-style.scss
+++ b/app/scripts/components/Home/home-style.scss
@@ -5,7 +5,8 @@
 
   .info-column {
     display: flex;
-    margin-top: $medium-margin;
+    margin-top: rem(30);
+    margin-bottom: rem(30);
 
     .info-column-text {
       margin-left: $small-margin;
