--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -1,32 +1,40 @@
 <div class="c-home">
   <article-component class="about-us">
-    <h1>Data4SDGs Developer Playground</h1>
+    <h1>About API Highways</h1>
 
     <div class="row expanded">
 
-      <div class="column small-12 medium-6 large-4 info-column">
-        <icon-component class="-round -medium -base" name="icon-group"></icon-component>
+      <div class="column small-12 medium-6 info-column">
+        <icon-component class="-round -medium -base" name="icon-data"></icon-component>
         <div class="info-column-text">
-          <h3>Increase openness and leverage existing data.</h3>
-          <p>By bringing together high-value data sets across sectors for achieving the SDGs.</p>
+          <h3>Developer-friendly, application-ready</h3>
+          <p>We bring high-value data sets and APIs from government, NGO, and private sector organizations into a single infrastructure. This gives developers familiar and standardized APIs and tools to create visualizations and applications on top of SDG-related data.</p>
         </div>
       </div>
 
-      <div class="column small-12 medium-6 large-4 info-column">
-        <icon-component class="-round -medium -base" name="icon-data"></icon-component>
+      <div class="column small-12 medium-6 info-column">
+        <icon-component class="-round -medium -base" name="icon-group"></icon-component>
         <div class="info-column-text">
-          <h3>Improve the effective use of data.</h3>
+          <h3>An open source developer community</h3>
           <p>
-            By providing robust APIs to empower data to be combined in new ways for further insights.
+            All API Highways software infrastructure is comprehensively documented and <b>100% open source</b>. We are a community of developers, data enthusiasts, and international development experts building an ecosystem of shared methodologies and open source code.
           </p>
         </div>
       </div>
 
-      <div class="column small-12 medium-6 large-4 info-column">
+      <div class="column small-12 medium-6 info-column">
+        <icon-component class="-round -medium -base" name="icon-laptop"></icon-component>
+        <div class="info-column-text">
+        <h3>Data discoverability</h3>
+        <p>We are growing a network of machine-readable, application-ready API-enabled data from a wealth of government, private, and NGO sources. All data is easily searchable and contextually linked using our Knowledge Graph.</p>
+        </div>
+      </div>
+
+      <div class="column small-12 medium-6 info-column">
         <icon-component class="-round -medium -base" name="icon-tools"></icon-component>
         <div class="info-column-text">
-        <h3>Enable data for action and decision making</h3>
-        <p>By empowering the developer community to create rich applications and visualizations.</p>
+        <h3>Use case development</h3>
+        <p>Through a “network of networks” approach, API Highways seeks to make your data more accessible, facilitate code-sharing and community development, and re-purpose projects across new regions and contexts.</p>
         </div>
       </div>
     </div>
