style for twitter

--- a/app/scripts/components/Footer/footer-template.html
+++ b/app/scripts/components/Footer/footer-template.html
@@ -4,7 +4,7 @@
       <div class="footer-link-section">
         <li>
           <a href="http://www.data4sdgs.org/" target="_blank">
-            <img src="/static/logos/global_partnership_sdg.jpg" class="sdg-logo">
+            <img src="/static/logos/global_partnership_sdg.png" class="sdg-logo">
           </a>
         </li>
 
