--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -5,7 +5,7 @@
     <div class="row expanded">
 
       <div class="column small-12 medium-6 info-column">
-        <icon-component class="-round -medium -base" name="icon-data"></icon-component>
+        <icon-component class="-round -large -base" name="icon-hub"></icon-component>
         <div class="info-column-text">
           <h3>Developer-friendly, application-ready</h3>
           <p>We bring high-value data sets and APIs from government, NGO, and private sector organizations into a single infrastructure. This gives developers familiar and standardized APIs and tools to create visualizations and applications on top of SDG-related data.</p>
@@ -13,7 +13,7 @@
       </div>
 
       <div class="column small-12 medium-6 info-column">
-        <icon-component class="-round -medium -base" name="icon-group"></icon-component>
+        <icon-component class="-round -large -base" name="icon-community"></icon-component>
         <div class="info-column-text">
           <h3>An open source developer community</h3>
           <p>
@@ -23,7 +23,7 @@
       </div>
 
       <div class="column small-12 medium-6 info-column">
-        <icon-component class="-round -medium -base" name="icon-laptop"></icon-component>
+        <icon-component class="-round -large -base" name="icon-laptop"></icon-component>
         <div class="info-column-text">
         <h3>Data discoverability</h3>
         <p>We are growing a network of machine-readable, application-ready API-enabled data from a wealth of government, private, and NGO sources. All data is easily searchable and contextually linked using our Knowledge Graph.</p>
@@ -31,7 +31,7 @@
       </div>
 
       <div class="column small-12 medium-6 info-column">
-        <icon-component class="-round -medium -base" name="icon-tools"></icon-component>
+        <icon-component class="-round -large -base" name="icon-settings"></icon-component>
         <div class="info-column-text">
         <h3>Use case development</h3>
         <p>Through a “network of networks” approach, API Highways seeks to make your data more accessible, facilitate code-sharing and community development, and re-purpose projects across new regions and contexts.</p>
@@ -89,7 +89,7 @@
   </article-component>
 
   <article-component class="twitter-slider">
-    <h4 class="-center -uppercase">What our champions have to say</h4>
+    <h4 class="-center">What our champions have to say</h4>
     <slider-component>
       <div v-for="tweet in twitterSlides">
         <div class="tweet">
@@ -115,8 +115,8 @@
 
   <article-component class="-complementary">
     <h1>Data Champions</h1>
-    <h4 class="-light -center -uppercase">
-      180+ Champions globally representing the full range of data producers and users working to
+    <h4 class="-light -center">
+      80+ Champions globally representing the full range of data producers and users working to
       harness the data revolution for sustainable development.
     </h4>
     <partners-carousel></partners-carousel>
