--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -1,9 +1,7 @@
 
 @font-face {
   font-family: 'bebas-neue';
-  src: url('../fonts/bebas-neue/BebasNeue-Regular.woff2') format('woff2'),
-  url('../fonts/bebas-neue/BebasNeue-Regular.woff') format('woff');
-
+  src: url('../fonts/bebas-neue/BebasNeue-Regular.otf') format('opentype')
 }
 
 @font-face {
