--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -31,7 +31,7 @@ $font-weight-bold: 700;
 
 // App Palette
 $theme-base: $white;
-$theme-complementary: $lightgrey;
+$theme-complementary: #f0f0f0;
 $theme-accent: $theme-blue;
 $theme-alternative: $black;
 
@@ -44,7 +44,7 @@ $base-font-family-semi: 'proxima-nova-semibold', Helvetica, Arial, sans-serif;
 $base-font-size: $font-size-normal;
 $base-line-height: 1.5;
 
-$base-bg-color: $subtle-grey;
+$base-bg-color: $white;
 $base-font-color: $dark-grey;
 
 $header-bg-color: $grayed-black;
