--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -89,7 +89,7 @@
   </article-component>
 
   <article-component class="twitter-slider">
-    <h4 class="-center">What our champions have to say</h4>
+    <h3 class="-center">What our champions have to say</h3>
     <slider-component>
       <div v-for="tweet in twitterSlides">
         <div class="tweet">
@@ -115,7 +115,7 @@
 
   <article-component class="-complementary">
     <h1>Data Champions</h1>
-    <h4 class="-light -center">
+    <h4 class="-light -center desc">
       80+ Champions globally representing the full range of data producers and users working to
       harness the data revolution for sustainable development.
     </h4>
