change text and padding

--- a/app/scripts/components/Landing/Page/template.html
+++ b/app/scripts/components/Landing/Page/template.html
@@ -2,17 +2,20 @@
   <div class="landing-wrapper">
     <div class="landing-jumbotron">
       <h2 class="jumbotron-title">
-        <span>We convene</span>
-        <span>We connect</span>
-        <span>We catalize</span>
+        <span>Better data</span>
+        <span>Better decisions</span>
+        <span>Better lives</span>
       </h2>
-      <h3 class="jumbotron-subtitle">To help end extreme poverty, fight inequality and injustice, and combat climate change.</h3>
     </div>
-    <div class="landing-content">
-      <h3 class="content-title">The global partnership for sustainable development data</h3>
-      <p class="content-text">
-        Is an unprecedented, open, multi-stakeholder network working to harness the data revolution for sustainable development.Our 150+ partners are joining forces to galvanize political commitment, align strategic priorities, foster collaboration, spur innovation and build trust in the booming data ecosystems of the 21st century.
-      </p>
+    <div class="row">
+      <div class="column small-12 medium-10">
+        <div class="landing-content">
+          <h3 class="content-title">The global partnership for sustainable development data</h3>
+          <p class="content-text">
+            supports stakeholders to harness the data revolution for sustainable development. The Global Partnership has 300 members from around the globe and across all sectors, many of which have valuable data sets that could support the implementation and measurement of the Sustainable Development Goals (SDGs). However, it is often difficult to find the right data sets in a developer-friendly format across a plethora of portals and platforms, thus inhibiting further use, application, and innovation around these data. API Highways was launched to provide easy access to SDG-relevant data and further empower the developer community to use these data for action and decision-making through the development of rich visualizations and applications.
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
